fixed spacing

--- a/styles.css
+++ b/styles.css
@@ -263,6 +263,6 @@ html{
     background-repeat: no-repeat;
     background-size: contain;
     position: relative;
-    right: 11.4%;
+    right: 32%;
     top: 3%;
 }
